build: add rewrites to vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,17 @@
 {
-    "$schema": "https://openapi.vercel.sh/vercel.json"
+    "$schema": "https://openapi.vercel.sh/vercel.json",
+    "rewrites": [
+        {
+            "source": "/settle",
+            "destination": "/api/settle"
+        },
+        {
+            "source": "/supported",
+            "destination": "/api/supported"
+        },
+        {
+            "source": "/verify",
+            "destination": "/api/verify"
+        }
+    ]
 }
